<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"
        android:layout_above="@id/login_ll"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        />

    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/login_ed">
            <ImageView
                android:padding="2dp"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/login_log"
                />
            <EditText
                android:paddingLeft="5dp"
                android:id="@+id/login_userName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/login_user"
                android:layout_height="wrap_content"
                android:background="@drawable/no_border"
                />
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:background="@drawable/login_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/login_paw"
                />
            <EditText
                android:paddingLeft="5dp"
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/no_border"
                android:layout_height="wrap_content"
                android:hint="@string/login_pwd"
                android:inputType="textPassword"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/login_login"
            android:layout_marginRight="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            />
        <Button
            android:id="@+id/login_register"
            android:layout_marginLeft="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            />
    </LinearLayout>

</RelativeLayout>
